fixing clicking in white space issue

--- a/src/timeline/timeline-entry-dot/timeline-entry-dot.component.scss
+++ b/src/timeline/timeline-entry-dot/timeline-entry-dot.component.scss
@@ -1,9 +1,4 @@
 mgl-timeline-entry-dot {
     display: block;
     position: absolute;
-
-    & div  {
-        height: 100%;
-        width: 100%;
-    }
 }
